# Unscented-Kalman-Filter-Rust

./: .gitignore  Cargo.toml  README.md  output.txt
src/: filter.rs  main.rs  sensor.rs  ukf_type.rs  util.rs
